# llm-decoder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scaled-dt-attention.py
decoder/: MiniGPT.py  block.py  multi_head_attention.py  scaled_dt_attention.py  show_next_prob.py  train.ipynb  train.py
